# cpu-render-sandbox

./: .gitignore  Cargo.toml
cpurender/: Cargo.toml
cpurender/src/: frag.rs  fragment.rs  lib.rs
faster/: Cargo.toml
faster/src/: main.rs  wec.rs
foo/: Cargo.toml
foo/src/: main.rs
src/: main.rs
