[package]
name = "cpurender"
version = "0.1.0"
authors = ["Phoenix Kahlo <phoenix@correlation-one.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.25.1"
image = "0.22.2"
rand = "0.7.2"
crossbeam = "0.7.2"
